# PhoenixTibia

./: .gitignore  CMakeLists.txt  PhoenixTibia.sln  README.md
PhoenixLibrary/: CMakeLists.txt  Callback.h  Component.cpp  Component.h  ComponentManager.cpp  ComponentManager.h  LoggerComponent.cpp  LoggerComponent.h  LuaNetworkService.cpp  LuaNetworkService.h  NetworkConnection.cpp  NetworkConnection.h  NetworkDefinitions.h  NetworkListener.cpp  NetworkListener.h  NetworkManager.cpp  NetworkManager.h  NetworkService.cpp  NetworkService.h  Packet.h  PhoenixLibrary.vcxproj  PhoenixLibrary.vcxproj.filters  Plugin.cpp  Plugin.h  PluginComponent.cpp  PluginComponent.h  Script.cpp  Script.h  ScriptComponent.cpp  ScriptComponent.h  Settings.cpp  Settings.h  Tools.cpp  Tools.h
PhoenixTibiaServer/: CMakeLists.txt  PhoenixTibiaServer.vcxproj  PhoenixTibiaServer.vcxproj.filters  account_config.lua  config.lua  interserver_config.lua  login_config.lua  main.cpp
PhoenixTibiaServer/data/: rsa.pem
PhoenixTibiaServer/data/libs/: sha1.lua
PhoenixTibiaServer/data/plugins/: account_plugins.xml  interserver_plugins.xml  login_plugins.xml  plugins.xml  plugins.xslt
PhoenixTibiaServer/data/scripts/: account-service.lua  account_scripts.xml  hello-world.lua  scripts.xml  test.lua
Plugin_Account/: AccountService.cpp  AccountService.h  Character.h  Plugin_Account.vcxproj  Plugin_Account.vcxproj.filters  World.cpp  plugin.cpp
Plugin_AccountService/: AccountService.cpp  AccountService.h  Plugin_AccountService.vcxproj  Plugin_AccountService.vcxproj.filters  plugin.cpp
Plugin_HelloWorld/: Plugin_HelloWorld.vcxproj  Plugin_HelloWorld.vcxproj.filters  plugin.cpp
Plugin_Interserver/: InterserverService.cpp  InterserverService.h  Plugin_Interserver.vcxproj  Plugin_Interserver.vcxproj.filters  plugin.cpp
Plugin_InterserverClient/: InterserverClient.cpp  InterserverClient.h  Plugin_InterserverClient.vcxproj  Plugin_InterserverClient.vcxproj.filters  plugin.cpp
Plugin_LoginService/: Account.cpp  Account.h  Character.cpp  LoginService.cpp  LoginService.h  Plugin_LoginService.vcxproj  Plugin_LoginService.vcxproj.filters  World.cpp  World.h  plugin.cpp
